--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 
   <body>
     <div style="display: flex; align-items: top">
-      <canvas width="600" height="500" style="border: solid 1px black"></canvas>
+      <div class="container">
+        <canvas
+          width="600"
+          height="500"
+          style="border: solid 1px black"
+        ></canvas>
+        <div id="overlay">
+        </div>
+      </div>
       <div id="sliders"></div>
     </div>
     <div id="controls2"></div>
